<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llAttendanceStudentSide"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="@drawable/dashboard_attendance_shape"
    android:gravity="center"
    android:orientation="vertical">


    <com.infinity.infoway.university_demo.custom_class.TextViewRegularFont
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="8dp"
        android:text="Your Attendance!"
        android:textSize="12sp"
        android:textColor="@color/colorPrimary" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/cpCurrentMonthStudentSide"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progressbar"
            android:rotation="-90" />

        <com.infinity.infoway.university_demo.custom_class.TextViewRegularFont
            android:id="@+id/tvPercentageCurrentMonthStudentSide"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_circle"
            android:gravity="center"
            android:text="0%"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.infinity.infoway.university_demo.custom_class.TextViewRegularFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cpCurrentMonthStudentSide"
            android:gravity="center"
            android:text="@string/current_month"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/cpPreviousMonthStudentSide"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progressbar"
            android:rotation="-90" />

        <com.infinity.infoway.university_demo.custom_class.TextViewRegularFont
            android:id="@+id/tvPercentagePreviousMonthStudentSide"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_circle"
            android:gravity="center"
            android:text="0%"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.infinity.infoway.university_demo.custom_class.TextViewRegularFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cpPreviousMonthStudentSide"
            android:gravity="center"
            android:text="@string/previous_month"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/cpAvgStudentSide"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"
            android:progressDrawable="@drawable/custom_progressbar"
            android:rotation="-90" />

        <com.infinity.infoway.university_demo.custom_class.TextViewRegularFont
            android:id="@+id/tvPercentageAvgStudentSide"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_centerInParent="true"
            android:background="@drawable/custom_circle"
            android:gravity="center"
            android:text="0%"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <com.infinity.infoway.university_demo.custom_class.TextViewRegularFont
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cpAvgStudentSide"
            android:gravity="center"
            android:text="@string/average"
            android:textColor="@color/colorPrimary"
            android:textSize="10sp" />

    </RelativeLayout>

</LinearLayout>