<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".faculty.faculty_dashboard.activity.FacultyDashboardActivity">

    <LinearLayout
        android:id="@+id/llNotifiationFaculty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dashboard_actionbar_shape"
        android:elevation="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cImgProfileFacultySide"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="#FFFFFF"
            android:elevation="8dp"
            android:src="@drawable/person_img"
            app:civ_border_color="#c7c7c7"
            app:civ_border_width="0.4dp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.infinity.infoway.atmiya.custom_class.TextViewBoldFont
                android:id="@+id/tvFacultyName"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text=""
                android:textColor="@color/colorPrimary" />

            <com.infinity.infoway.atmiya.custom_class.TextViewRegularFont
                android:id="@+id/tvFacultyDesignation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text=""
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgNotificationBellFacultySide"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            app:srcCompat="@drawable/ic_notification" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svFacultyDashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llNotifiationFaculty">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:orientation="vertical">

                <net.seifhadjhassen.recyclerviewpager.RecyclerViewPager
                    android:id="@+id/recyclerViewPagerFacultySideBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:svp_colorActiveIndicator="@color/colorAccent"
                    app:svp_colorInactiveIndicator="@color/gray"
                    app:svp_runAuto="true"
                    app:svp_timeMillis="1500" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="18dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llSyllabusStudentSide"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_syllabus" />

                        <com.infinity.infoway.atmiya.custom_class.TextViewRegularFont
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/syllabus"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llLeassonPlanStudentSide"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_lesson_plan" />

                        <com.infinity.infoway.atmiya.custom_class.TextViewRegularFont
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/lesson_plan"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llHomeWorkStudentSide"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_home_work" />

                        <com.infinity.infoway.atmiya.custom_class.TextViewRegularFont
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/home_work"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/llFeeDetailsStudentSide"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:adjustViewBounds="true"
                            app:srcCompat="@drawable/ic_fee_details" />

                        <com.infinity.infoway.atmiya.custom_class.TextViewRegularFont
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/fee_details"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llActivityStudentSide"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_activity" />

                        <com.infinity.infoway.atmiya.custom_class.TextViewRegularFont
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/activity"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/llMessageHistoryStudentSide"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="?android:attr/selectableItemBackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            app:srcCompat="@drawable/ic_message_history" />

                        <com.infinity.infoway.atmiya.custom_class.TextViewRegularFont
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/message_history"
                            android:textColor="@color/colorPrimary"
                            android:textSize="12sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llAnnouncementFacultyDashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:orientation="vertical"
                android:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                    <com.infinity.infoway.atmiya.custom_class.TextViewMediumFont
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_weight="1"
                        android:text="Announcement"
                        android:textColor="@color/colorPrimary"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btnViewAllAnnouncement"
                        android:layout_width="wrap_content"
                        android:layout_height="34dp"
                        android:background="@drawable/btn_capsual_shape_accent"
                        android:elevation="0dp"
                        android:text="View All"
                        android:textAllCaps="false"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvAnnouncementFacultySide"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/llFacultyDashboradProgressbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llNotifiationFaculty">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/colorPrimary" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>